--- a/Counter/index.html
+++ b/Counter/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My-Counter</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <label id="Countlabel">0</label><br>
-    <div id="button-container">
-        <button id="increasebtn" class="buttons">+</button>
-        <button id="decreasebtn" class="buttons">-</button>
+    <label id="Countlabel">0</label>
+    <div id="buttonsdiv">
+        <button id="incbtn" class="buttons">+</button>
+        <button id="decbtn" class="buttons">-</button>
     </div>
     <script src="index.js"></script>
 </body>
